# lore

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.lore/: config.json  index.json
.lore/entries/: 05408b55-222e-4b61-89c2-0a860c4eea50.json  056a995b-11c8-44a7-b918-1d274cbb4304.json  17447bfc-3889-47e7-8302-a25e211c134c.json  19de3d7c-bc24-498c-8d07-d18b22148b3b.json  1b549f62-2449-409a-8a2f-3038739f08f0.json  1e1fb2fd-723d-4c16-9276-14ef1f6d1efa.json  28f7d8b2-6c8b-47d7-9282-95a14399b5c2.json  303dadde-948b-488a-9834-82b998bbf595.json  39b90dee-802a-48fe-918d-4694985fd7fc.json  41b8e471-a4d8-4e89-bfe2-5c92b318f1cc.json  44f54483-2128-4831-856b-3fdb1ce72e66.json  4974dbcf-ece5-42f5-9fc2-5d037024a594.json  51de351d-1b92-4f49-836d-4619cd457be8.json  5f3fa820-4773-43bf-9167-e87c5c25bb34.json  68b427b0-31bf-4e69-8eca-f616ff43899f.json  6ee0f41b-682c-4853-be15-8487fb684261.json  8ad8f6d0-04e7-49ad-baf1-b9bf691076b7.json  8eb87360-c9f7-4d7f-90dc-1cb9a109885e.json  90cc5f89-7e4a-4771-91fa-28b45cdc0547.json  a93b283b-57a7-4f7c-a6b3-8131a25c24de.json  b04502d2-6a3b-48c9-b207-72a9cce21a27.json  b799844a-ceae-435d-927f-87f5e0ac07e8.json  c6ad5f91-1f0e-4a1b-a636-b49c5459a66c.json  ce8311e1-d7e1-4501-9d7a-76ffad7b76e0.json  d31c32d9-8f83-4da3-a7c9-8e74e07e8afe.json  e1564969-3782-447a-98d5-c8640429907d.json  e345f3f1-dd33-4278-9310-3d19afd0cc91.json  e45e6a3e-8aea-4fc2-96ae-e87f5ef31986.json
docs/: MERGE_STRATEGY.md  index.html
scripts/: lore-merge-driver.sh
src/: git.rs  main.rs  models.rs  storage.rs
(+7 files in other folders)
