[package]
name = "lore"
version = "0.1.0"
edition = "2021"
description = "A reasoning engine for code - stores the 'why' behind changes"
license = "MIT"
authors = ["Lore Contributors"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }
colored = "2.1"
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "lore"
path = "src/main.rs"
